--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy Node App to EC2
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   deploy:
@@ -28,10 +28,10 @@ jobs:
             fi
 
             cd Fittract_backend || exit 1
-            git pull origin master
+            git pull origin main
 
             echo "MONGO_URI=${{ secrets.MONGO_URI }}" > .env
-            echo "PORT=4000" >> .env
+            echo "PORT=5000" >> .env
 
             npm install
             pm2 delete student-api || true
