--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
 
             echo "MONGO_URI=${{ secrets.MONGO_URI }}" > .env
             echo "PORT=5000" >> .env
+            echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
 
             npm install
             pm2 delete student-api || true
