--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
             cd Fittract_backend || exit 1
             git pull origin main
 
-            echo "MONGO_URI=${{ secrets.MONGO_URI }}" > .env
+            echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" > .env
             echo "PORT=5000" >> .env
             echo "JWT_SECRET=${{ secrets.JWT_SECRET }}" >> .env
 
